@@ -1,5 +1,6 @@
 2011-02-07 Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #17502: ExtDirect Exception: "Error parsing json response: null"
 	* Fixed bug #17500: Improve error handling in ExtDirect router (Thanks to Helmut Hummel)
 
 2011-02-07  Ernesto Baschny  <ernst@cron-it.de>
